--- a/quill-fe/src/app/home/widgets/TaskDetail/tasks.css
+++ b/quill-fe/src/app/home/widgets/TaskDetail/tasks.css
@@ -8,8 +8,8 @@
   background-color: unset;
 }
 
-.task-wrapper input.title.editing {
-  background-color: rgba(0, 0, 0, 0.265);
+.task-wrapper input.title:focus-within {
+  background-color: var(--g6);
 }
 
 .title-date-wrapper {
@@ -64,7 +64,9 @@ label.check-box-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  cursor: pointer;  
+  border-radius: 1px;
+  height: fit-content;
 } 
 
 .check-box-wrapper input {
@@ -72,15 +74,18 @@ label.check-box-wrapper {
 }
 
 i.checkmark {
-  width: min-content;
+  width: fit-content;
   aspect-ratio: 1 / 1;
   font-size: var(--check-box-size);
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .check-box-wrapper label:focus i,
-.color-bubble-wrapper:focus {
-  box-shadow: 0 0 0 var(--focus-border-width) var(--focus-highlight);
+.color-bubble-wrapper:focus
+ {
+  outline: auto;
 }
 
 .checkmark.round {
